style: fixed word-wrap of output

--- a/community/public/css/style.less
+++ b/community/public/css/style.less
@@ -257,6 +257,7 @@ section.lightgray {
     background-color: rgba(255, 255, 255, 0);
     max-height: 300px;
     white-space: pre-wrap;
+    word-wrap: break-word;
     margin: 0px;
     margin-left: 20px;
     padding: 4px;
